2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_macro_error): New.
	Use it where appropriate instead of...
	(&am_line_error): this.
	Using it for a macro is a croak error.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* tests/asm.test: s/AC_PROG_AS/AM_PROG_AS/.
	AC_OUTPUT a Makefile.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (%var_line): Rename as...
	(%var_location): this.
	Use it consistently as the location where the macro is defined,
	file and line when possible, otherwise just file.
	(&read_am_file): Rules have their own location tracking, don't
	pollute %var_location.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (am_line_error): Clarify.

	
2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_print_error): Set $exit_status since all your
	users do.
	(&am_error, &am_file_error, &am_line_error, &am_conf_error):
	Don't.
	(&am_conf_line_error, &am_conf_line_warning): Remove.
	Adjust callers to use &am_file_error and...
	(&am_file_warning): new.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* m4/regex.m4: Use AC_LIBOBJ.
	Require 2.50, and use AC_LIBSOURCES freely.
	* tests/asm.tests: Formatting changes.
	Exercise AM_PROG_AS.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* tests/install.test: This test is an empty shell, do not run
	automake.
	* tests/Makefile.am (TESTS): Don't run it.
	* tests/defs (ACLOCAL): When using gettext, pass in the installed
	aclocaldir.
	* tests/subdircond.test (SUBDIRS): AM_GNU_GETTEXT needs automake
	--add--missing.
	* tests/obsolete2.test: Remove, merged into...
	* tests/obsolete.test: here.
	Both aclocal and automake should complain.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (scan_autoconf_traces): Don't recognize AC_SUBSTs
	for symbols which cannot be Make macro names.
	(scan_one_autoconf_file): `$here' is new.
	Use it consistently instead of `1' to remember a token was seen.

2001-10-21  Akim Demaille  <akim@epita.fr>
