@@ -1,5 +1,12 @@
 2001-10-21  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&am_target_error): New.
+	Use it where appropriate instead of...
+	(&am_line_error): this.
+	Using it for a target is a croak error.
+
+2001-10-21  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&am_macro_error): New.
 	Use it where appropriate instead of...
 	(&am_line_error): this.
